chore: update German localization strings for consistency and accuracy [skip-ci]

--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -11,10 +11,10 @@
   "add": "Hinzufügen",
   "add_contact": "Kontakt hinzufügen",
   "add_contact_to_address_book": "Möchten Sie diesen Kontakt zu Ihrem Adressbuch hinzufügen?",
-  "add_custom_node": "Neuen benutzerdefinierten Knoten hinzufügen",
+  "add_custom_node": "Neuen benutzerdefinierten Nodes hinzufügen",
   "add_custom_redemption": "Benutzerdefinierte Einlösung hinzufügen",
   "add_fund_to_card": "Prepaid-Guthaben zu den Karten hinzufügen (bis zu ${value})",
-  "add_new_node": "Neuen Knoten hinzufügen",
+  "add_new_node": "Neuen Nodes hinzufügen",
   "add_new_word": "Neues Wort hinzufügen",
   "add_passphrase": "Fügen Sie Passphrase hinzu",
   "add_passphrase_warning_text": "Geben Sie nur eine Passphrase ein, wenn Sie in der Vergangenheit eine für diese Wallet verwendet haben. Wenn Sie die falsche Passphrase eingeben oder in dieser Wallet noch keine Passphrase verwendet haben, werden Sie keine vorhandenen Gelder oder Verlauf sehen.",
@@ -141,8 +141,8 @@
   "change": "Ändern",
   "change_backup_password_alert": "Ihre vorherigen Sicherungsdateien können nicht mit einem neuen Sicherungskennwort importiert werden. Das neue Sicherungskennwort wird nur für neue Sicherungsdateien verwendet. Sind Sie sicher, dass Sie das Sicherungskennwort ändern möchten?",
   "change_currency": "Währung ändern",
-  "change_current_node": "Möchten Sie den aktuellen Knoten wirklich zu ${node}? ändern?",
-  "change_current_node_title": "Aktuellen Knoten ändern",
+  "change_current_node": "Möchten Sie den aktuellen Node wirklich zu ${node}? ändern?",
+  "change_current_node_title": "Aktuellen Node ändern",
   "change_exchange_provider": "Swap-Anbieter ändern",
   "change_language": "Sprache ändern",
   "change_language_to": "Sprache zu ${language} ändern?",
@@ -185,7 +185,7 @@
   "confirm_fee_deduction_content": "Stimmen Sie zu, die Gebühr von der Ausgabe abzuziehen?",
   "confirm_passphrase": "Passphrase bestätigen",
   "confirm_sending": "Senden bestätigen",
-  "confirm_silent_payments_switch_node": "Ihr aktueller Knoten unterstützt keine Silent Payments.\\n\\nCake Wallet wechselt zu einem kompatiblen Knoten, nur zum Scannen",
+  "confirm_silent_payments_switch_node": "Ihr aktueller Node unterstützt keine Silent Payments.\\n\\nCake Wallet wechselt zu einem kompatiblen Node, nur zum Scannen",
   "confirm_transaction": "Transaktion bestätigen",
   "confirmations": "Bestätigungen",
   "confirmed": "Bestätigter Saldo",
@@ -313,12 +313,12 @@
   "e_sign_consent": "E-Sign-Zustimmung",
   "edit": "Bearbeiten",
   "edit_backup_password": "Sicherungskennwort bearbeiten",
-  "edit_node": "Knoten bearbeiten",
+  "edit_node": "Node bearbeiten",
   "edit_token": "Token bearbeiten",
   "electrum_address_disclaimer": "Wir generieren jedes Mal neue Adressen, wenn Sie eine verwenden, aber vorherige Adressen funktionieren weiterhin",
   "email_address": "E-Mail-Adresse",
   "enable": "Aktivieren",
-  "enable_auto_node_switching": "Aktivieren Sie die automatische Knotenschaltung",
+  "enable_auto_node_switching": "Aktivieren Sie die automatische Nodewechsel",
   "enable_builtin_tor": "Aktivieren Sie den bau-in tor",
   "enable_for_auto_switching": "Aktivieren Sie die automatische Schaltung",
   "enable_mempool_api": "Mempool-API für genaue Gebühren und Daten",
@@ -351,7 +351,7 @@
   "error_text_maximum_limit": "Handel für ${provider} wird nicht erstellt. Menge ist über dem Maximum: ${max} ${currency}",
   "error_text_minimal_limit": "Handel für ${provider} wird nicht erstellt. Menge ist unter dem Minimum: ${min} ${currency}",
   "error_text_node_address": "Bitte geben Sie eine iPv4-Adresse ein",
-  "error_text_node_port": "Der Knotenport darf nur Nummern zwischen 0 und 65535 enthalten",
+  "error_text_node_port": "Der Port darf nur Nummern zwischen 0 und 65535 enthalten",
   "error_text_node_proxy_address": "Bitte geben Sie <IPv4-Adresse>:<Port> ein, zum Beispiel 127.0.0.1:9050",
   "error_text_payment_id": "Die Zahlungs-ID darf nur 16 bis 64 hexadezimale Zeichen enthalten",
   "error_text_subaddress_name": "Der Name der Unteradresse darf nicht die Zeichen ` , ' \" enthalten\nund muss zwischen 1 und 20 Zeichen lang sein",
@@ -488,7 +488,7 @@
   "litecoin_mweb_enable": "Aktivieren Sie MWeb",
   "litecoin_mweb_enable_later": "Sie können MWEB unter Anzeigeeinstellungen erneut aktivieren.",
   "litecoin_mweb_logs": "MWEB-Protokolle",
-  "litecoin_mweb_node": "MWEB-Knoten",
+  "litecoin_mweb_node": "MWEB-Node",
   "litecoin_mweb_pegin": "Peg in",
   "litecoin_mweb_pegout": "Peg out",
   "litecoin_mweb_scanning": "MWEB Scanning",
@@ -503,8 +503,8 @@
   "low_fee": "Niedrige Gebühr",
   "low_fee_alert": "Sie verwenden derzeit eine niedrige Netzwerkgebührenpriorität. Dies kann zu langen Wartezeiten, unterschiedlichen Kursen oder stornierten Trades führen. Wir empfehlen, für ein besseres Erlebnis eine höhere Gebühr festzulegen.",
   "made_easy": "leicht gemacht",
-  "manage_nodes": "Knoten verwalten",
-  "manage_pow_nodes": "PoW-Knoten verwalten",
+  "manage_nodes": "Node verwalten",
+  "manage_pow_nodes": "PoW-Node verwalten",
   "manage_yats": "Yats verwalten",
   "mark_as_redeemed": "Als eingelöst markieren",
   "market_place": "Marktplatz",
@@ -540,7 +540,7 @@
   "nanogpt_subtitle": "Alle neuesten Modelle (GPT-4, Claude).",
   "narrow": "Eng",
   "new_first_wallet_text": "Wenn Sie Ihren Krypto schützen, ist ein Kinderspiel",
-  "new_node_testing": "Neuen Knoten testen",
+  "new_node_testing": "Neuen Node testen",
   "new_subaddress_create": "Erstellen",
   "new_subaddress_label_name": "Bezeichnung",
   "new_subaddress_title": "Neue Adresse",
@@ -557,14 +557,14 @@
   "no_relay_on_domain": "Es gibt kein Relay für die Domäne des Benutzers oder das Relay ist nicht verfügbar. Bitte wählen Sie ein zu verwendendes Relais aus.",
   "no_relays": "Keine Relais",
   "no_relays_message": "Wir haben einen Nostr NIP-05-Eintrag für diesen Benutzer gefunden, der jedoch keine Relays enthält. Bitte weisen Sie den Empfänger an, Relays zu seinem Nostr-Datensatz hinzuzufügen.",
-  "node_address": "Knotenadresse",
+  "node_address": "Nodeadresse",
   "node_connection_failed": "Verbindung fehlgeschlagen",
   "node_connection_successful": "Die Verbindung war erfolgreich",
-  "node_new": "Neuer Knoten",
-  "node_port": "Knotenport",
+  "node_new": "Neuer node",
+  "node_port": "Port",
   "node_reset_settings_title": "Einstellungen zurücksetzen",
   "node_test": "Test",
-  "nodes": "Knoten",
+  "nodes": "Nodes",
   "nodes_list_reset_to_default_message": "Möchten Sie wirklich die Standardeinstellungen wiederherstellen?",
   "none_of_selected_providers_can_exchange": "Keiner der ausgewählten Anbieter kann diesen Tausch machen",
   "noNFTYet": "Noch keine NFTs",
@@ -587,7 +587,7 @@
   "optional_email_hint": "Optionale Benachrichtigungs-E-Mail für den Zahlungsempfänger",
   "optional_name": "Optionaler Empfängername",
   "optionally_order_card": "Optional eine physische Karte bestellen.",
-  "orbot_running_alert": "Bitte stellen Sie sicher, dass Orbot läuft, bevor Sie sich mit diesem Knoten verbinden.",
+  "orbot_running_alert": "Bitte stellen Sie sicher, dass Orbot läuft, bevor Sie sich mit diesem Node verbinden.",
   "order_by": "Sortieren nach",
   "order_id": "Bestell-ID",
   "order_physical_card": "Physische Karte bestellen",
@@ -632,7 +632,7 @@
   "Please_reference_document": "Weitere Informationen finden Sie in den Dokumenten unten.",
   "please_select": "Bitte auswählen:",
   "please_select_backup_file": "Bitte wählen Sie die Sicherungsdatei und geben Sie das Sicherungskennwort ein.",
-  "please_try_to_connect_to_another_node": "Bitte versuchen Sie, sich mit einem anderen Knoten zu verbinden",
+  "please_try_to_connect_to_another_node": "Bitte versuchen Sie, sich mit einem anderen Node zu verbinden",
   "please_wait": "Warten Sie mal",
   "polygonscan_history": "PolygonScan-Verlauf",
   "potential_scam": "Potenzieller Betrug",
@@ -681,8 +681,8 @@
   "reject": "Ablehnen",
   "remaining": "Rest",
   "remove": "Entfernen",
-  "remove_node": "Knoten entfernen",
-  "remove_node_message": "Möchten Sie den ausgewählten Knoten wirklich entfernen?",
+  "remove_node": "Node entfernen",
+  "remove_node_message": "Möchten Sie den ausgewählten Node wirklich entfernen?",
   "rename": "Umbenennen",
   "rep_warning": "Repräsentative Warnung",
   "rep_warning_sub": "Ihr Vertreter scheint nicht gut zu sein. Tippen Sie hier, um eine neue auszuwählen",
@@ -842,12 +842,12 @@
   "settings_change_language": "Sprache ändern",
   "settings_change_pin": "PIN ändern",
   "settings_currency": "Währung",
-  "settings_current_node": "Aktueller Knoten",
+  "settings_current_node": "Aktueller Node",
   "settings_dark_mode": "Dunkler Modus",
   "settings_display_balance": "Kontostand anzeigen",
   "settings_display_on_dashboard_list": "Anzeige in der Dashboard-Liste",
   "settings_fee_priority": "Gebührenpriorität",
-  "settings_nodes": "Knoten",
+  "settings_nodes": "Nodes",
   "settings_none": "Keiner",
   "settings_only_trades": "Nur Handel",
   "settings_only_transactions": "Nur Transaktionen",
@@ -948,7 +948,7 @@
   "sync_status_syncronized": "SYNCHRONISIERT",
   "sync_status_syncronizing": "SYNCHRONISIERE",
   "sync_status_timed_out": "Zeitlich abgestimmt",
-  "sync_status_unsupported": "Nicht unterstützter Knoten",
+  "sync_status_unsupported": "Nicht unterstützter Node",
   "synchronizing": "Synchronisierung",
   "syncing_wallet_alert_content": "Ihr Kontostand und Ihre Transaktionsliste sind möglicherweise erst vollständig, wenn oben „SYNCHRONISIERT“ steht. Klicken/tippen Sie, um mehr zu erfahren.",
   "syncing_wallet_alert_title": "Ihr Wallet wird synchronisiert",
