--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -871,6 +871,7 @@
   "show": "Показване",
   "show_address_book_popup": "Показване на изскачащ прозорец на адресна книга",
   "show_balance": "Дълго натиснете, за да покажете баланса",
+  "show_balance_send_page": "Докоснете, за да разкриете",
   "show_balance_toast": "Дълго натискане, за да се скрие или покаже баланс",
   "show_details": "Показване на подробностите",
   "show_keys": "Покажи seed/keys",
