--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -366,8 +366,8 @@
   "estimated_new_fee": "Nueva tarifa estimada",
   "estimated_receive_amount": "Cantidad estimada a recibir",
   "eta": "ETA",
-  "etherscan_history": "Historial de Etherscan",
   "ethereum_ecosystem": "Ecosistema Etereum",
+  "etherscan_history": "Historial de Etherscan",
   "event": "Evento",
   "events": "Eventos",
   "evm_ecosystem_description": "Si es necesario, modifica la red y el token que deseas utilizar para este pago.",
@@ -872,6 +872,7 @@
   "show": "Mostrar",
   "show_address_book_popup": "Mostrar la ventana emergente de la libreta de direcciones",
   "show_balance": "Mantén pulsado para mostrar saldo",
+  "show_balance_send_page": "Toca para revelar",
   "show_balance_toast": "Mantén pulsado para ocultar o mostrar el saldo",
   "show_details": "Mostrar detalles",
   "show_keys": "Mostrar semilla/claves",
