--- a/res/values/strings_gn.arb
+++ b/res/values/strings_gn.arb
@@ -667,6 +667,7 @@
   "setup_your_debit_card": "Emohenda nde tarjeta débito",
   "share": "Mbohasa",
   "share_address": "Mbohasa dirección",
+  "show_balance_send_page": "Tap ojekuaa haguã .",
   "show_details": "Hechauka umi mba’e",
   "show_keys": "Hechauka ñe’ẽñemi",
   "show_market_place": "Hechauka ñemuha renda",
