--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -873,6 +873,7 @@
   "show": "Nuna",
   "show_address_book_popup": "Nuna littafin littafin adireshi",
   "show_balance": "Dogon latsawa don nuna ma'auni",
+  "show_balance_send_page": "Matsa don bayyana",
   "show_balance_toast": "Latsa latsawa don ɓoye ko nuna ma'auni",
   "show_details": "Nuna Cikakkun bayanai",
   "show_keys": "Nuna iri/maɓallai",
