--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -873,6 +873,7 @@
   "show": "दिखाओ",
   "show_address_book_popup": "पता बुक पॉपअप दिखाएं",
   "show_balance": "बैलेंस दिखाने के लिए लॉन्ग प्रेस",
+  "show_balance_send_page": "प्रकट करने के लिए टैप करें",
   "show_balance_toast": "संतुलन को छिपाने या दिखाने के लिए लॉन्ग प्रेस",
   "show_details": "विवरण दिखाएं",
   "show_keys": "बीज / कुंजियाँ दिखाएँ",
