--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -871,6 +871,7 @@
   "show": "Pokazati",
   "show_address_book_popup": "Prikaži Popup adresara",
   "show_balance": "Dugački pritisak za pokazivanje ravnoteže",
+  "show_balance_send_page": "Dodirnite za otkrivanje",
   "show_balance_toast": "Dugo pritisnite da biste sakrili ili pokazali ravnotežu",
   "show_details": "Prikaži pojedinosti",
   "show_keys": "Prikaži pristupni izraz/ključ",
