--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -869,6 +869,7 @@
   "show": "Ցուցահանդես",
   "show_address_book_popup": "Show ուցադրել հասցեի գրքի թռուցիկ",
   "show_balance": "Երկար մամուլ, հավասարակշռությունը ցույց տալու համար",
+  "show_balance_send_page": "Հպեք՝ բացահայտելու համար",
   "show_balance_toast": "Երկար սեղմեք `հավասարակշռությունը թաքցնելու կամ ցույց տալու համար",
   "show_details": "Ցուցադրել մանրամասներ",
   "show_keys": "Ցուցադրել բանալիներ",
