--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -874,6 +874,7 @@
   "show": "Menunjukkan",
   "show_address_book_popup": "Tampilkan Alamat Buku Popup",
   "show_balance": "PRESS PANJANG UNTUK MENUNJUKKAN Balance",
+  "show_balance_send_page": "Ketuk untuk mengungkapkan",
   "show_balance_toast": "Tekan panjang untuk menyembunyikan atau menunjukkan keseimbangan",
   "show_details": "Tampilkan Rincian",
   "show_keys": "Tampilkan seed/kunci",
