--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -871,6 +871,7 @@
   "show": "ပြသ",
   "show_address_book_popup": "လိပ်စာစာအုပ် popup ပြပါ",
   "show_balance": "ချိန်ခွင်လျှာကိုပြသရန်ရှည်လျားသောစာနယ်ဇင်း",
+  "show_balance_send_page": "ထုတ်ဖေါ်ဖို့ကိုအသာပုတ်ပါ",
   "show_balance_toast": "ချိန်ခွင်လျှာကိုဖျောက်ရန်သို့မဟုတ်ပြသရန်ရှည်လျားသောစာနယ်ဇင်း",
   "show_details": "အသေးစိတ်ပြ",
   "show_keys": "မျိုးစေ့ /သော့များကို ပြပါ။",
