--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -871,6 +871,7 @@
   "show": "Show",
   "show_address_book_popup": "Toon adresboek pop -up",
   "show_balance": "Lange pers om evenwicht te tonen",
+  "show_balance_send_page": "Tik om te onthullen",
   "show_balance_toast": "Lange pers om evenwicht te verbergen of te tonen",
   "show_details": "Toon details",
   "show_keys": "Toon zaad/sleutels",
