--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -366,8 +366,8 @@
   "estimated_new_fee": "Szacowana nowa opłata",
   "estimated_receive_amount": "Szacowana kwota otrzymania",
   "eta": "ETA",
-  "etherscan_history": "Historia Etherscan",
   "ethereum_ecosystem": "Ekosystem Ethereum",
+  "etherscan_history": "Historia Etherscan",
   "event": "Zdarzenie",
   "events": "Zdarzenia",
   "exchange": "Wymiana",
@@ -870,6 +870,7 @@
   "show": "Pokaż",
   "show_address_book_popup": "Pokaż wyskakujące okno książki adresowej",
   "show_balance": "Przytrzymaj, aby wyświetlić saldo",
+  "show_balance_send_page": "Kliknij, aby odsłonić",
   "show_balance_toast": "Przytrzymaj, aby ukryć lub pokazać saldo",
   "show_details": "Pokaż Szczegóły",
   "show_keys": "Pokaż seed/klucze",
