--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -873,6 +873,7 @@
   "show": "Mostrar",
   "show_address_book_popup": "Mostrar pop -up de livro de endereços",
   "show_balance": "Pressione há muito tempo para mostrar o equilíbrio",
+  "show_balance_send_page": "Toque para revelar",
   "show_balance_toast": "Pressione há muito tempo para se esconder ou mostrar equilíbrio",
   "show_details": "Mostrar detalhes",
   "show_keys": "Mostrar semente/chaves",
