--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -872,6 +872,7 @@
   "show": "Показывать",
   "show_address_book_popup": "Показать адресную книгу всплывающее окно",
   "show_balance": "Длинная пресса, чтобы показать баланс",
+  "show_balance_send_page": "Нажмите, чтобы открыть",
   "show_balance_toast": "Длинная нажавка, чтобы скрыть или показать баланс",
   "show_details": "Показать детали",
   "show_keys": "Показать мнемоническую фразу/ключи",
