--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -872,6 +872,7 @@
   "show": "Показувати",
   "show_address_book_popup": "Показати спливаюче вікно адреси книги",
   "show_balance": "Довга преса, щоб показати рівновагу",
+  "show_balance_send_page": "Торкніться, щоб відкрити",
   "show_balance_toast": "Довга преса, щоб приховати або показати рівновагу",
   "show_details": "Показати деталі",
   "show_keys": "Показати мнемонічну фразу/ключі",
