--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -873,6 +873,7 @@
   "show": "دکھائیں",
   "show_address_book_popup": "ایڈریس بک پاپ اپ دکھائیں",
   "show_balance": "توازن ظاہر کرنے کے لئے طویل پریس",
+  "show_balance_send_page": "ظاہر کرنے کے لئے ٹیپ کریں",
   "show_balance_toast": "توازن چھپانے یا ظاہر کرنے کے لئے طویل پریس",
   "show_details": "تفصیلات دکھائیں",
   "show_keys": "بیج / چابیاں دکھائیں۔",
