--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -872,6 +872,7 @@
   "show": "Fihan",
   "show_address_book_popup": "Fihan Agbejade Iwe Adirẹsi",
   "show_balance": "Tẹ Tẹ lati ṣafihan iwọntunwọnsi",
+  "show_balance_send_page": "Fọwọ ba lati ṣafihan",
   "show_balance_toast": "Tẹ Tẹ lati tọju tabi ṣafihan iwọntunwọnsi",
   "show_details": "Fi ìsọfúnni kékeré hàn",
   "show_keys": "Wo hóró / àwọn kọ́kọ́rọ́",
