--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -279,6 +279,7 @@
   "deuro_tx_commited_content": "Може да отнеме няколко секунди, за да може транзакцията да се потвърди и да бъде отразена на екрана",
   "device_is_signing": "Устройството подписва",
   "dfx_option_description": "Купете криптовалута с Eur & CHF. За търговски и корпоративни клиенти в Европа",
+  "did_you_back_up_seeds": "Архивирате ли всичките си семена?",
   "didnt_get_code": "Не получихте код?",
   "digit_pin": "-цифрен PIN",
   "digital_and_physical_card": " дигитална или физическа предплатена дебитна карта",
@@ -310,6 +311,9 @@
   "domain_mismatch_description": "Този уебсайт има домейн, който не съответства на подателя на тази заявка. Одобряването може да доведе до загуба на средства.",
   "donation_link_details": "Подробности за връзката за дарение",
   "done": "Готово",
+  "duress_pin_description": "Това ще настрои PIN за принуда, разширена функция, която не трябва да се използва от повечето потребители. Този ПИН трябва да се използва само ако сте в опасност. След като използвате този ПИН, всичките ви портфейли ще бъдат изтрити, така че, моля, уверете се, че всичките ви семена са архивирани, преди да го използвате.",
+  "durres_PIN": "ЕГН по принуда",
+  "durres_PIN_set_up_successfully": "ПИН кодът за принуда е настроен успешно",
   "e_sign_consent": "E-Sign съгласие",
   "edit": "Промени",
   "edit_backup_password": "Промяна на паролата за възстановяване",
@@ -549,6 +553,7 @@
   "new_transactions_notifications": "Изпратете известия за нови транзакции",
   "new_wallet": "Нов портфейл",
   "newConnection": "Нова връзка",
+  "no": "не",
   "no_cards_found": "Не са намерени карти",
   "no_extra_detail": "Няма налични допълнителни подробности",
   "no_id_needed": "Без нужда от документ за самоличност!",
@@ -861,6 +866,7 @@
   "setup_2fa": "Настройка на Cake 2FA",
   "setup_2fa_text": "Cake 2FA работи с помощта на TOTP като втори фактор за удостоверяване.\n\nTOTP на Cake 2FA изисква SHA-512 и поддръжка на 8 цифри; това осигурява повишена сигурност. Повече информация и поддържани приложения можете да намерите в ръководството.",
   "setup_pin": "Настройване на PIN",
+  "setup_pin_is_failed": "Пинът за настройка е неуспешен с грешка:",
   "setup_successful": "Вашият PIN бе успешно настроен!",
   "setup_totp_recommended": "Настройка на TOTP",
   "setup_warning_2fa_text": "Cake 2FA е второ удостоверяване за определени действия в портфейла. НЕ е толкова сигурно, колкото хладилното съхранение.\n\nАко загубите достъп до вашето 2FA приложение или TOTP ключове, ЩЕ загубите достъп до този портфейл. Ще трябва да възстановите портфейла си от мнемоничното семе.\n\nПоддръжката на Cake няма да може да ви помогне, ако загубите достъп до вашите 2FA или мнемонични семена.\nПреди да използвате Cake 2FA, препоръчваме да прочетете ръководството.",
@@ -1153,6 +1159,7 @@
   "yat_error_content": "Няма адреси, свързани с този Yat. Опитайте с друг Yat",
   "yat_popup_content": "Вече можете да изпращате и да получавате крипто в Cake Wallet с вашия Yat - кратко потребителско име във формата на емоджи. Управлявайте своите Yats по всяко време в настройките",
   "yat_popup_title": "Адресът на вашия портфейл може да съдържа емоджита.",
+  "yes": "да",
   "yesterday": "Вчера",
   "you_now_have_debit_card": "Вече имате дебитна карта",
   "you_pay": "Вие плащате",
