--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -279,6 +279,7 @@
   "deuro_tx_commited_content": "Yana iya ɗaukar wasu secondsan seconds don ma'amala don tabbatarwa kuma a nuna shi a allon",
   "device_is_signing": "Na'urar tana shiga",
   "dfx_option_description": "Buy crypto tare da Eur & Chf. Don Retail da abokan ciniki na kamfanoni a Turai",
+  "did_you_back_up_seeds": "Shin kun dawo da duk tsaba?",
   "didnt_get_code": "Ba a samun code?",
   "digit_pin": "-lambar PIN",
   "digital_and_physical_card": "katin zare kudi na dijital da na zahiri",
@@ -310,6 +311,9 @@
   "domain_mismatch_description": "Wannan rukunin yanar gizon yana da yanki wanda bai dace da aika wannan bukatar ba. Yarda na iya haifar da asarar kudade.",
   "donation_link_details": "Bayanin hanyar sadaka",
   "done": "Yi",
+  "duress_pin_description": "Wannan zai kafa wani yanki na Duress, wanda aka ci gaba da ya kamata a yi amfani da shi da yawancin masu amfani. Wannan PIN zai yi amfani da wannan idan kun kasance cikin haɗari. Bayan amfani da wannan PIN, za a goge duk wuraren tafiyarku, don haka don Allah a tabbatar da cewa duk tsirar ku ana tallafawa kafin amfani da shi.",
+  "durres_PIN": "Duress Pin",
+  "durres_PIN_set_up_successfully": "DURES PIN an saita shi cikin nasara",
   "e_sign_consent": "Izinin Alamar E-Sign",
   "edit": "Gyara",
   "edit_backup_password": "Shirya Kalmar wucewa ta Ajiyayyen",
@@ -549,6 +553,7 @@
   "new_transactions_notifications": "Aika sanarwa game da sababbin ma'amaloli",
   "new_wallet": "Sabuwar Wallet",
   "newConnection": "Sabuwar Haɗi",
+  "no": "A'a",
   "no_cards_found": "Babu katunan da aka samo",
   "no_extra_detail": "Babu ƙarin cikakkun bayanai",
   "no_id_needed": "Babu ID da ake buƙata!",
@@ -863,6 +868,7 @@
   "setup_2fa": "Saiti 2FA",
   "setup_2fa_text": "Cake 2FA yana aiki ta amfani da TOTP azaman ƙimar tabbatarwa ta biyu.\n\nCake 2FA's TOTP yana buƙatar tallafin lambobi SHA-512 da 8; wannan yana ba da ƙarin tsaro. Ana iya samun ƙarin bayani da ƙa'idodi masu goyan baya a cikin jagorar.",
   "setup_pin": "Saita PIN",
+  "setup_pin_is_failed": "Anceta Saita Saiti Tare da Kuskure:",
   "setup_successful": "An saita PIN ɗinku da nasara!",
   "setup_totp_recommended": "Saita TOTP",
   "setup_warning_2fa_text": "Kuna buƙatar dawo da walat ɗin ku daga zuriyar mnemonic.\n\nTallafin kek ba zai iya taimaka muku ba idan kun rasa damar yin amfani da 2FA ko tsaba na mnemonic.\nCake 2FA tabbaci ne na biyu don wasu ayyuka a cikin walat. Kafin amfani da Cake 2FA, muna ba da shawarar karanta ta cikin jagorar.BA shi da tsaro kamar ajiyar sanyi.\n\nIdan ka rasa damar yin amfani da app ɗinka na 2FA ko maɓallan TOTP, ZA KA rasa damar shiga wannan wallet ɗin. ",
@@ -1156,6 +1162,7 @@
   "yat_error_content": "Babu adireshi da ke da alaƙa da wannan Yat. Gwada wani Yat",
   "yat_popup_content": "Yanzu zaku iya aikawa da karɓar crypto a cikin Cake Wallet tare da Yat - gajere, sunan mai amfani na tushen emoji. Sarrafa Yats a kowane lokaci akan allon saiti",
   "yat_popup_title": "Adireshin jakar ku na iya zama emojifid.",
+  "yes": "I",
   "yesterday": "Jiya",
   "you_now_have_debit_card": "Yanzu kana da katin zare kudi",
   "you_pay": "Ka Bayar",
