--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -279,6 +279,7 @@
   "deuro_tx_commited_content": "၎င်းသည်ငွေပေးငွေယူကိုအတည်ပြုရန်နှင့်မျက်နှာပြင်ပေါ်တွင်ထင်ဟပ်ရန်စက္ကန့်အနည်းငယ်ကြာနိုင်သည်",
   "device_is_signing": "ကိရိယာလက်မှတ်ထိုးနေသည်",
   "dfx_option_description": "Crypto ကို EUR & CHF ဖြင့် 0 ယ်ပါ။ လက်လီရောင်းဝယ်မှုနှင့်ဥရောပရှိကော်ပိုရိတ်ဖောက်သည်များအတွက်",
+  "did_you_back_up_seeds": "မင်းမျိုးစေ့တွေအားလုံးကိုအမ်းလိုက်လား",
   "didnt_get_code": "ကုဒ်ကို မရဘူးလား?",
   "digit_pin": "-ဂဏန်း PIN",
   "digital_and_physical_card": "  ဒစ်ဂျစ်တယ်နှင့် ရုပ်ပိုင်းဆိုင်ရာ ကြိုတင်ငွေပေးချေသော ဒက်ဘစ်ကတ်",
@@ -310,6 +311,9 @@
   "domain_mismatch_description": "ဤ 0 က်ဘ်ဆိုက်တွင်ဤတောင်းဆိုမှုကိုပေးပို့သူနှင့်မကိုက်ညီသောဒိုမိန်းရှိသည်။ အတည်ပြုခြင်းသည်ရန်ပုံငွေများဆုံးရှုံးမှုကိုဖြစ်ပေါ်စေနိုင်သည်။",
   "donation_link_details": "လှူဒါန်းရန်လင့်ခ်အသေးစိတ်",
   "done": "ပြီးပြီ",
+  "duress_pin_description": "၎င်းသည်သုံးစွဲသူအများစုမှအသုံးမပြုသင့်သောအဆင့်မြင့်သောမျက်နှာပြင်တစ်ခု, သင်အန္တရာယ်ရှိပါကဤ PIN ကိုသာအသုံးပြုသင့်သည်။ ဤ PIN နံပါတ်ကိုအသုံးပြုပြီးနောက်သင်၏ပိုက်ဆံအိတ်အားလုံးကိုဖျက်ပစ်လိမ့်မည်။",
+  "durres_PIN": "duress pin",
+  "durres_PIN_set_up_successfully": "Duress Pin ကိုအောင်မြင်စွာသတ်မှတ်ထားသည်",
   "e_sign_consent": "E-Sign သဘောတူညီချက်",
   "edit": "တည်းဖြတ်ပါ။",
   "edit_backup_password": "Backup Password ကို တည်းဖြတ်ပါ။",
@@ -549,6 +553,7 @@
   "new_transactions_notifications": "အသစ်သောအရောင်းအဝယ်အကြောင်းသတိပေးချက်များပေးပို့ပါ",
   "new_wallet": "ပိုက်ဆံအိတ်အသစ်",
   "newConnection": "ချိတ်ဆက်မှုအသစ်",
+  "no": "မဟုတ်",
   "no_cards_found": "ကဒ်များမရှိပါ",
   "no_extra_detail": "အဘယ်သူမျှမအပိုအသေးစိတ်ကိုရရှိနိုင်",
   "no_id_needed": "ID မလိုအပ်ပါ။",
@@ -861,6 +866,7 @@
   "setup_2fa": "ကိတ်မုန့် 2FA စနစ်ထည့်သွင်းပါ။",
   "setup_2fa_text": "ကိတ်မုန့် 2FA သည် TOTP ကို ဒုတိယ စစ်မှန်ကြောင်းအထောက်အထားအဖြစ် အသုံးပြု၍ လုပ်ဆောင်သည်။\n\nကိတ်မုန့် 2FA ၏ TOTP သည် SHA-512 နှင့် 8 ဂဏန်းပံ့ပိုးမှု လိုအပ်သည်။ ဒါက လုံခြုံရေးကို တိုးမြှင့်ပေးတယ်။ နောက်ထပ်အချက်အလက်များနှင့် ပံ့ပိုးပေးထားသောအက်ပ်များကို လမ်းညွှန်တွင် တွေ့နိုင်ပါသည်။",
   "setup_pin": "ပင်နံပါတ်ကို စနစ်ထည့်သွင်းပါ။",
+  "setup_pin_is_failed": "Setup PIN ကိုအမှားနှင့်မအောင်မြင်ပါ။",
   "setup_successful": "သင့်ပင်နံပါတ်ကို အောင်မြင်စွာ သတ်မှတ်ပြီးပါပြီ။",
   "setup_totp_recommended": "TOTP စနစ်ထည့်သွင်းပါ။",
   "setup_warning_2fa_text": "ကိတ်မုန့် 2FA သည် ပိုက်ဆံအိတ်ရှိ အချို့သော လုပ်ဆောင်ချက်များ အတွက် ဒုတိယ စစ်မှန်ကြောင်း အထောက်အထား ဖြစ်သည်။ ၎င်းသည် အအေးခန်းကဲ့သို့ မလုံခြုံပါ။\n\nသင်၏ 2FA အက်ပ် သို့မဟုတ် TOTP သော့များကို အသုံးပြုခွင့် ဆုံးရှုံးပါက၊ သင်သည် ဤပိုက်ဆံအိတ်သို့ ဝင်ရောက်ခွင့် ဆုံးရှုံးမည်ဖြစ်သည်။ သင့်ပိုက်ဆံအိတ်ကို mnemonic မျိုးစေ့မှ ပြန်လည်ရယူရန် လိုအပ်မည်ဖြစ်သည်။\n\nသင်သည် သင်၏ 2FA သို့မဟုတ် mnemonic အစေ့များကို အသုံးပြုခွင့်ဆုံးရှုံးသွားပါက ကိတ်မုန့်ပံ့ပိုးကူညီမှု မပေးနိုင်ပါ။\nCake 2FA ကို အသုံးမပြုမီ၊ လမ်းညွှန်ချက်မှတစ်ဆင့် ဖတ်ရန် အကြံပြုအပ်ပါသည်။",
@@ -1153,6 +1159,7 @@
   "yat_error_content": "ဤ Yat နှင့် ချိတ်ဆက်ထားသော လိပ်စာမရှိပါ။ နောက်ထပ် Yat စမ်းကြည့်ပါ။",
   "yat_popup_content": "သင်၏ Yat - တိုတောင်းသော အီမိုဂျီအခြေခံအသုံးပြုသူအမည်ဖြင့် Cake Wallet တွင် crypto ကို ယခု ပေးပို့နိုင်ပါပြီ။ ဆက်တင်စခရင်ပေါ်တွင် Yats ကို အချိန်မရွေး စီမံခန့်ခွဲပါ။",
   "yat_popup_title": "သင့်ပိုက်ဆံအိတ်လိပ်စာကို emojified လုပ်နိုင်ပါသည်။",
+  "yes": "ဟုတ်ကဲ့",
   "yesterday": "မနေ့က",
   "you_now_have_debit_card": "ယခု သင့်တွင် ဒက်ဘစ်ကတ်တစ်ခုရှိသည်။",
   "you_pay": "သင်ပေးချေပါ။",
