--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -279,6 +279,7 @@
   "deuro_tx_commited_content": "交易可能需要几秒钟才能确认并在屏幕上反射",
   "device_is_signing": "设备正在签名",
   "dfx_option_description": "用Eur＆Chf购买加密货币。对于欧洲的零售和企业客户",
+  "did_you_back_up_seeds": "您备份了所有种子吗？",
   "didnt_get_code": "没有获取代码？",
   "digit_pin": "位 PIN",
   "digital_and_physical_card": "数字和物理预付借记卡",
@@ -310,6 +311,9 @@
   "domain_mismatch_description": "该网站的域与此请求的发件人的发件人不匹配。批准可能导致资金损失。",
   "donation_link_details": "捐赠链接详情",
   "done": "完毕",
+  "duress_pin_description": "这将设置胁迫 PIN，这是大多数用户不应使用的高级功能。仅当您遇到危险时才应使用此 PIN 码。使用此 PIN 码后，您的所有钱包都将被删除，因此请确保在使用之前备份您的所有种子。",
+  "durres_PIN": "胁迫密码",
+  "durres_PIN_set_up_successfully": "胁迫密码已成功设置",
   "e_sign_consent": "电子签名同意",
   "edit": "编辑",
   "edit_backup_password": "编辑备份密码",
@@ -549,6 +553,7 @@
   "new_transactions_notifications": "发送有关新交易的通知",
   "new_wallet": "新钱包",
   "newConnection": "新连接",
+  "no": "不",
   "no_cards_found": "找不到卡",
   "no_extra_detail": "没有其他详细信息",
   "no_id_needed": "不需要 ID！",
@@ -861,6 +866,7 @@
   "setup_2fa": "设置蛋糕 2FA",
   "setup_2fa_text": "Cake 2FA 使用 TOTP 作为第二个身份验证因素。\n\nCake 2FA 的 TOTP 需要 SHA-512 和 8 位数字支持；这提供了更高的安全性。更多信息和支持的应用程序可以在指南中找到。",
   "setup_pin": "设定PIN码",
+  "setup_pin_is_failed": "设置引脚失败并出现错误：",
   "setup_successful": "您的PIN码已成功设置!",
   "setup_totp_recommended": "设置 TOTP",
   "setup_warning_2fa_text": "Cake 2FA 是对钱包中某些操作的二次验证。它不如冷藏那么安全。\n\n如果您无法访问 2FA 应用程序或 TOTP 密钥，您将无法访问此钱包。您需要从助记词种子中恢复您的钱包。\n\n如果您无法访问 2FA 或助记词种子，Cake 支持将无法为您提供帮助。\n在使用 Cake 2FA 之前，我们建议您阅读该指南。",
@@ -1153,6 +1159,7 @@
   "yat_error_content": "沒有與此 Yat 相關聯的地址。 嘗試另一個 Yat",
   "yat_popup_content": "您現在可以使用 Yat 在 Cake Wallet 中發送和接收加密貨幣 - 一個基於表情符號的簡短用戶名。 在設置屏幕上隨時管理 Yats",
   "yat_popup_title": "您的錢包地址可以被表情化。",
+  "yes": "是的",
   "yesterday": "昨天",
   "you_now_have_debit_card": "你现在有一张借记卡",
   "you_pay": "你付钱",
