--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -279,6 +279,7 @@
   "deuro_tx_commited_content": "Puede tardar un par de segundos en que la transacción se confirme y se refleje en pantalla",
   "device_is_signing": "El dispositivo está firmando",
   "dfx_option_description": "Compra cripto con EUR o CHF. Para clientes minoristas y corporativos en Europa",
+  "did_you_back_up_seeds": "¿Hiciste una copia de seguridad de todas tus semillas?",
   "didnt_get_code": "¿No recibiste el código?",
   "digit_pin": "-dígitos PIN",
   "digital_and_physical_card": " tarjeta de débito prepago digital y física",
@@ -310,6 +311,9 @@
   "domain_mismatch_description": "Este sitio web tiene un dominio que no coincide con el remitente de esta solicitud. Aprobar podría provocar la pérdida de fondos.",
   "donation_link_details": "Detalles del enlace de donación",
   "done": "Listo",
+  "duress_pin_description": "Esto configurará un PIN de coacción, una función avanzada que la mayoría de los usuarios no deberían utilizar. Este PIN sólo debe utilizarse si se encuentra en peligro. Después de usar este PIN, se eliminarán todas sus billeteras, así que asegúrese de que todas sus semillas tengan una copia de seguridad antes de usarlo.",
+  "durres_PIN": "PIN de coacción",
+  "durres_PIN_set_up_successfully": "El PIN de coacción se ha configurado correctamente",
   "e_sign_consent": "Consentimiento de firma electrónica",
   "edit": "Editar",
   "edit_backup_password": "Editar contraseña de copia de seguridad",
@@ -366,8 +370,8 @@
   "estimated_new_fee": "Nueva tarifa estimada",
   "estimated_receive_amount": "Cantidad estimada a recibir",
   "eta": "ETA",
-  "etherscan_history": "Historial de Etherscan",
   "ethereum_ecosystem": "Ecosistema Etereum",
+  "etherscan_history": "Historial de Etherscan",
   "event": "Evento",
   "events": "Eventos",
   "evm_ecosystem_description": "Si es necesario, modifica la red y el token que deseas utilizar para este pago.",
@@ -549,6 +553,7 @@
   "new_transactions_notifications": "Enviar notificaciones de nuevas transacciones",
   "new_wallet": "Nueva billetera",
   "newConnection": "Nueva Conexión",
+  "no": "No",
   "no_cards_found": "No se encontraron tarjetas",
   "no_extra_detail": "No hay detalles adicionales disponibles",
   "no_id_needed": "¡No se necesita ID!",
@@ -862,6 +867,7 @@
   "setup_2fa": "Configurar Cake 2FA",
   "setup_2fa_text": "Cake 2FA funciona utilizando TOTP como segundo factor de autenticación.\n\nEl TOTP de Cake 2FA requiere SHA-512 y soporte para 8 dígitos; esto proporciona una mayor seguridad. Puedes encontrar más información y aplicaciones compatibles en la guía.",
   "setup_pin": "Configurar PIN",
+  "setup_pin_is_failed": "El pin de configuración falló con el error:",
   "setup_successful": "¡Tu PIN se ha configurado correctamente!",
   "setup_totp_recommended": "Configurar TOTP",
   "setup_warning_2fa_text": "Deberás restaurar tu billetera a partir de la semilla mnemotécnica (lista de palabras).\n\nEl soporte de Cake no podrá ayudarte si pierde el acceso a su 2FA o a tus semillas.\nCake 2FA es una segunda autenticación para ciertas acciones en la billetera. Antes de usar Cake 2FA, recomendamos leer la guía. NO es tan seguro como el almacenamiento en frío.\n\nSi pierdes acceso a tu aplicación 2FA o tus claves TOTP, perderás el acceso a esta billetera. ",
@@ -1155,6 +1161,7 @@
   "yat_error_content": "No hay direcciones vinculadas a este Yat. Prueba con otro Yat",
   "yat_popup_content": "Ahora puedes enviar y recibir cripto en Cake Wallet con tu Yat, un nombre de usuario corto basado en emojis. Administra Yats en cualquier momento desde la pantalla de configuración",
   "yat_popup_title": "La dirección de tu billetera se puede emoji-ficar.",
+  "yes": "Sí",
   "yesterday": "Ayer",
   "you_now_have_debit_card": "Ahora tienes una tarjeta de débito",
   "you_pay": "Tú pagas",
