--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -279,6 +279,7 @@
   "deuro_tx_commited_content": "Možda će trebati nekoliko sekundi da se transakcija potvrdi i odrazi na zaslonu",
   "device_is_signing": "Uređaj se potpisuje",
   "dfx_option_description": "Kupite kriptovalute s Eur & CHF. Za maloprodajne i korporativne kupce u Europi",
+  "did_you_back_up_seeds": "Jeste li sigurnosno kopirali sve svoje sjemenke?",
   "didnt_get_code": "Ne dobivate kod?",
   "digit_pin": "-znamenkasti PIN",
   "digital_and_physical_card": "digitalna i fizička unaprijed plaćena debitna kartica",
@@ -310,6 +311,9 @@
   "domain_mismatch_description": "Ova web stranica ima domenu koja ne odgovara pošiljatelju ovog zahtjeva. Odobrenje može dovesti do gubitka sredstava.",
   "donation_link_details": "Detalji veza za donacije",
   "done": "Završen",
+  "duress_pin_description": "Ovo će postaviti PIN za prisilu, naprednu značajku koju većina korisnika ne bi trebala koristiti. Ovaj PIN treba koristiti samo ako ste u opasnosti. Nakon korištenja ovog PIN-a, svi će vaši novčanici biti izbrisani, pa provjerite jesu li svi vaši seedovi sigurnosno kopirani prije nego što ga upotrijebite.",
+  "durres_PIN": "PIN za prisilu",
+  "durres_PIN_set_up_successfully": "Prisilni PIN je uspješno postavljen",
   "e_sign_consent": "E-Sign pristanak",
   "edit": "Uredi",
   "edit_backup_password": "Uredi lozinku za sigurnosnu kopiju",
@@ -549,6 +553,7 @@
   "new_transactions_notifications": "Pošaljite obavijesti o novim transakcijama",
   "new_wallet": "Novi novčanik",
   "newConnection": "Nova veza",
+  "no": "Ne",
   "no_cards_found": "Nisu pronađene kartice",
   "no_extra_detail": "Nema dostupnih dodatnih detalja",
   "no_id_needed": "Nije potreban ID!",
@@ -861,6 +866,7 @@
   "setup_2fa": "Postavljanje torte 2FA",
   "setup_2fa_text": "Cake 2FA radi koristeći TOTP kao drugi faktor provjere autentičnosti.\n\nCake 2FA TOTP zahtijeva SHA-512 i podršku za 8 znamenki; ovo osigurava povećanu sigurnost. Više informacija i podržanih aplikacija možete pronaći u vodiču.",
   "setup_pin": "Podesi PIN",
+  "setup_pin_is_failed": "Pin za postavljanje nije uspio s pogreškom:",
   "setup_successful": "Vaš je pin uspješno postavljen!",
   "setup_totp_recommended": "Postavite TOTP",
   "setup_warning_2fa_text": "Morat ćete obnoviti svoj novčanik iz mnemoničkog sjemena.\n\nPodrška za kolače neće vam moći pomoći ako izgubite pristup svojim 2FA ili mnemoničkim izvorima.\nCake 2FA je druga provjera autentičnosti za određene radnje u novčaniku. Prije uporabe Cake 2FA preporučujemo da pročitate vodič.NIJE siguran kao hladno skladište.\n\nAko izgubite pristup svojoj 2FA aplikaciji ili TOTP ključevima, IZGUBIT ĆETE pristup ovom novčaniku. ",
@@ -1153,6 +1159,7 @@
   "yat_error_content": "Nema adresa povezanih s ovim Yat -om. Pokušajte s drugim Yat -om",
   "yat_popup_content": "Sada možete slati i primati kriptovalute u Cake Wallet s vašim Yat - kratkim korisničkim imenom zasnovanim na emojijima. Upravljajte Yatsom u bilo kojem trenutku na zaslonu postavki",
   "yat_popup_title": "Adresa vašeg novčanika može biti emojificirana.",
+  "yes": "Da",
   "yesterday": "Jučer",
   "you_now_have_debit_card": "Sada imate debitnu karticu",
   "you_pay": "Vi plaćate",
